[package]
name = "az_light_switch"
version = "0.1.0"
authors = ["Steven Chang <steven.chang@btn.group>"]
edition = "2021"

[dependencies]
# Import ink!
ink = { version = "~4.2.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# Brush dependency
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.0.0", default-features = false, features = ["ownable"] }

[lib]
name = "az_light_switch"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # Brush dependency
    "openbrush/std",
]
ink-as-dependency = []
